--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
-  "extends": ["eslint-config-unjs"],
-  "rules": {}
+  "extends": [
+    "eslint-config-unjs"
+  ],
+  "rules": {
+    "no-eval": "off"
+  }
 }
