--- a/package.json
+++ b/package.json
@@ -1,36 +1,21 @@
 {
-  "name": "packageName",
+  "name": "runtime-compat-data-ws",
+  "private": true,
   "version": "0.0.0",
   "description": "",
-  "repository": "unjs/packageName",
+  "repository": "ascorbic/runtime-compat-data",
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "vitest dev",
+    "build:runtimes": "pnpm run --filter \"*-runtime\" build",
+    "run-tests": "pnpm run --filter \"*-runtime\" start",
     "lint": "eslint --cache --ext .ts,.js,.mjs,.cjs . && prettier -c src test",
     "lint:fix": "eslint --cache --ext .ts,.js,.mjs,.cjs . --fix && prettier -c src test -w",
-    "prepack": "pnpm build",
-    "play": "jiti playground",
-    "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags",
-    "test": "pnpm lint && pnpm test:types && vitest run --coverage",
-    "test:types": "tsc --noEmit --skipLibCheck"
+    "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags"
   },
   "devDependencies": {
+    "@mdn/browser-compat-data": "^5.5.14",
     "@types/node": "^20.11.19",
     "@vitest/coverage-v8": "^1.3.0",
     "changelogen": "^0.5.5",
@@ -38,6 +23,7 @@
     "eslint-config-unjs": "^0.2.1",
     "jiti": "^1.21.0",
     "prettier": "^3.2.5",
+    "start-server-and-test": "^2.0.3",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
     "vitest": "^1.3.0"
