chore: add GH Actions

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build:runtimes": "pnpm run --filter \"*-runtime\" build",
-    "process-tests": "node scripts/process-test-results.js",
-    "run-tests": "pnpm run --filter \"*-runtime\" start",
-    "build": "pnpm build:runtimes && pnpm run-tests && pnpm process-tests",
+    "generate": "pnpm generate:build && pnpm generate:run && pnpm generate:process",
+    "generate:build": "pnpm run --filter \"*-runtime\" build",
+    "generate:process": "node scripts/process-test-results.js",
+    "generate:run": "pnpm run --filter \"*-runtime\" start",
     "lint": "eslint --cache --ext .ts,.js,.mjs,.cjs . && prettier -c src test",
     "lint:fix": "eslint --cache --ext .ts,.js,.mjs,.cjs . --fix && prettier -c src test -w",
     "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags"
