--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: '0 12 * * *'
+  workflow_dispatch:
   pull_request:
-    branches:
-      - main
+    paths: 
+    - .github/workflows/update-data.yml
 
 jobs:
   update:
@@ -43,3 +46,4 @@ jobs:
           title: "Update runtime compat data"
           body: |
             Updates the runtime compat data
+          base: main
