chore: allow PR write

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -10,7 +10,8 @@ on:
   pull_request:
     paths: 
     - .github/workflows/update-data.yml
-
+permissions:
+  pull-requests: write
 jobs:
   update:
     runs-on: ubuntu-latest
