--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -12,6 +12,7 @@ on:
     - .github/workflows/update-data.yml
 permissions:
   pull-requests: write
+  contents: write
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -38,6 +39,9 @@ jobs:
         run: sudo dpkg -i fastly_*_linux_amd64.deb && fastly version
       - run: pnpm install
       - run: pnpm generate
+      - name: Get runtime versions
+        id: get-versions
+        run: scripts/version.sh >> "$GITHUB_OUTPUT"
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
@@ -46,5 +50,6 @@ jobs:
             packages/data/data.json
           title: "Update runtime compat data"
           body: |
-            Updates the runtime compat data
+            Updates the runtime compat data.
+            Versions: ${{ steps.get-versions.outputs.versions }}
           base: main
