--- a/src/runtimes/bun/package.json
+++ b/src/runtimes/bun/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "bun run.ts > data.json"
+    "start": "bun run.ts > data.json",
+    "version": "bun -v"
   },
   "author": "",
   "license": "MIT"
