--- a/src/runtimes/workerd/package.json
+++ b/src/runtimes/workerd/package.json
@@ -7,7 +7,8 @@
     "build": "unbuild",
     "run": "curl -o data.json http://localhost:8080",
     "start-server": "workerd serve config.capnp --experimental",
-    "start": "start-server-and-test start-server http://localhost:8080 run"
+    "start": "start-server-and-test start-server http://localhost:8080 run",
+    "version": "workerd --version"
   },
   "type": "module",
   "keywords": [],
