--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -2,7 +2,12 @@
   "name": "runtime-compat-data",
   "version": "0.0.2",
   "description": "JavaScript runtime compatibility data",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ascorbic/runtime-compat-data.git"
+  },
   "main": "data.json",
+  "type": "commonjs",
   "scripts": {
     "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags"
   },
