--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -9,7 +9,7 @@
   "main": "data.json",
   "type": "commonjs",
   "scripts": {
-    "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags"
+    "release": "changelogen --release && npm publish && git push --follow-tags"
   },
   "exports": {
     ".": {
