--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -21,7 +21,7 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: lts/*
           cache: "pnpm"
       - uses: oven-sh/setup-bun@v1
         with:
